# tritopic

./: DOCS.md  README.md  docs.md  pyproject.toml  tritopic_full_demo.ipynb
docs/: README.md  docs.md
